# strada

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  CONTRIBUTING.md  IDEAS.md  README.md  diagnostic-sweep.md
.agents/skills/diagnostic-sweep/: SKILL.md  clangd-setup.md  lsp-tool.md  subagent-prompt.md
.agents/skills/herdr-spawning/: SKILL.md
.devcontainer/: Dockerfile  devcontainer-ci.json  devcontainer.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  cpm_benchmarks.cpp
cmake/: Config.cmake.in  Doxygen.cmake  EnsureOutOfSourceBuilds.cmake  LinkTimeOptimization.cmake  Warnings.cmake
docs/adr/: 0001-initial-architecture.md  0002-opendrive-spec-alignment.md  0003-project-layout-and-tooling.md  0004-cpm-architecture.md  0005-cross-section-surface.md  0006-factoring-out-cpm-subcomponents.md  0007-tessellator-and-visualizer-architecture.md  0008-ast-value-representation.md  0009-fresnel-math-alignment.md  0010-interactive-route-creation.md  0011-topological-connectivity-snapping.md
docs/agents/: issue-tracker.md
docs/guidelines/: cpp_style.md
docs/reviews/: architecture-review-20260620121914.html  architecture-review-20260704072827.html
examples/: CMakeLists.txt
examples/visualizer/: CMakeLists.txt  main.cpp  viewport_widget.cpp  viewport_widget.hpp  visualizer_window.cpp  visualizer_window.hpp
include/strada/: strada.hpp
include/strada/ast/: abstract_syntax_tree.hpp  extensions.hpp  geometry.hpp  header.hpp  junction.hpp  lanes.hpp  objects.hpp  opendrive.hpp  profiles.hpp  road.hpp  signals.hpp
include/strada/cpm/: aligned_allocator.hpp  bounding_volume_hierarchy.hpp  bvh.hpp  compiled_physics_model.hpp  coordinate.hpp  elevation_profile.hpp  geometry_math.hpp  ids.hpp  lane_network.hpp  polynomials.hpp  query_context.hpp  reference_line.hpp
include/strada/parser/: conversions.hpp  errors.hpp  parser.hpp
include/strada/routing/: graph.hpp  route_builder.hpp
include/strada/tess/: tessellator.hpp
include/strada/vis/: camera.hpp  colors.hpp  geometry_batcher.hpp  viewport_widget.hpp  visualizer_window.hpp
src/: CMakeLists.txt  strada.cpp
src/cpm/: bounding_volume_hierarchy.cpp  bvh.cpp  compiled_physics_model.cpp  elevation_profile.cpp  geometry_math.cpp  geometry_math.hpp  lane_network.cpp  polynomials.cpp  reference_line.cpp  road_projector.cpp  road_projector.hpp  rotation.hpp
src/parser/: parser.cpp
src/routing/: graph.cpp  route_builder.cpp
src/tess/: tessellator.cpp  triangulation.cpp  triangulation.hpp
src/vis/: CMakeLists.txt  camera.cpp  geometry_batcher.cpp  viewport_widget.cpp  visualizer_window.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/ast/: test_parser.cpp
tests/cpm/: test_bounding_volume_hierarchy.cpp  test_bvh.cpp  test_compiled_physics_model.cpp  test_elevation_profile.cpp  test_geometry_math.cpp  test_lane_network.cpp  test_polynomials.cpp  test_reference_line.cpp  test_road_projector.cpp  test_rotation.cpp
tests/cpm/data/: bivariate_shape_road.xodr  spiral_road.xodr
tests/data/: cross_section_surface_road_1.xodr  cross_section_surface_road_2.xodr  error_missing_plan_view.xodr  error_missing_road_id.xodr  extensions.xodr  geometry.xodr  junction_boundary.xodr  junctions.xodr  lanes_and_profiles.xodr  lanes_flat.xodr  minimal_header.xodr  objects.xodr  roads.xodr  signal_dependency.xodr
tests/facade/: test_strada.cpp
tests/routing/: graph_test.cpp  route_builder_test.cpp
tests/tess/: test_tessellator.cpp
tests/vis/: CMakeLists.txt  test_camera.cpp  test_vis.cpp
tests/visualizer/: test_camera.cpp  test_visualizer.cpp
tools/ci/: build_and_test.sh  generate_coverage.sh  run_all.sh  run_clang_format.sh  run_clang_tidy.sh  run_cppcheck.sh  run_iwyu.sh  run_static_checks.sh
tools/clang_tidy_plugin/: CMakeLists.txt  LocalAutoStyleCheck.cpp  LocalAutoStyleCheck.h  StradaTidyModule.cpp
tools/clang_tidy_plugin/tests/: run_tests.sh  test_local_auto_style.cpp  test_local_auto_style.fixed.cpp
